css/style.css
/* ... */
.img-overlay.first {
  top: calc(16% - 2px);
  right: 3px;
  bottom: 2px;
  left: -2px;
}

.img-overlay.middle {
  right: 2px;
  left: 6px;
}

.img-overlay p {
  width: 100%;
  padding: 20px;
  font-size: 26px;
  text-align: center;
}

.concepts-showdown .second-col { margin-top: -6.5rem; }

.concepts-showdown .second-col img { margin-left: 7px; }

.disalign-right {
  float: right;
  margin-right: 26px;
}

.disalign-left { margin-left: -20px; }

.concepts-showdown .img-overlay {
  right: 13px;
  left: 17px;
}

.concepts-showdown .first { padding-top: 15px; }

.concepts-showdown .first .img-overlay { top: 17px; }

.concepts-showdown .second-col .img-overlay {
  right: 8px;
  left: 22px;
}

.perseverance img:hover + .img-overlay,
.img-overlay:hover { opacity: 0; }

.gallery-img { cursor: pointer; }

#gallery-carousel .carousel-inner img { border-radius: 3px; }

.full-view-overlay {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 2000;
  display: flex;
  align-items: center;
  background-color: rgba(0,0,0,.86);
  transform: scale(2);
  opacity: 0;
  transition: transform 200ms, opacity 300ms;
}

.full-view-overlay.view {
  transform: scale(1);
  opacity: 1;
  transition: transform 500ms, opacity 200ms;
}

.full-view-content {
  padding: 20px;
  margin: auto;
}

.full-view-close {
  position: absolute;
  top: 10px;
  right: 15px;
  font-size: 45px !important;
  cursor: pointer;
  color: #888;
}

.full-view-close:hover { color: #eee; }

@media only screen and (min-width: 768px) {
  .logo-pos { max-width: 77px; }

  .text-left-sm { text-align: left; }

  .text-right-sm { text-align: right; }

  .gallery h1 { font-size: 21px; }

  .m-top11rem { margin-top: 6rem; }

  .jumbo { font-size: 6rem; }

  .full-view-content { max-width: 83%; }
}

@media only screen and (min-width: 850px) {
  .gallery h1 { font-size: 28px; }
}

@media only screen and (min-width: 992px) {
  .logo-pos { margin-left: calc(100% - 5rem); }

  .quote-align.less { left: 40%; }

  .quote-align.less.concepts { left: 50%; }

  .quote-align h1 { font-size: 28px; }

  .m-top11rem { margin-top: 11rem; }

  .jumbo { font-size: 11rem; }

  .full-view-content { max-width: 70%; }
}

@media only screen and (max-width: 1130px) and (min-width: 768px) {
  .affix .text-center {
    margin-left: 11%;
    text-align: left;
  }
}

@media only screen and (max-width: 991px) {
  .parallax-window { min-height: 27rem; }

  .img36 { margin-top: -83.5%; }
}

@media only screen and (max-width: 849px) and (min-width: 768px) {
  .gallery h1 {
    position: relative;
    top: -4px;
  }

  .affix.gallery h1 { top: 4px; }
}

@media only screen and (max-width: 767px) {
  .no-pad-xs { padding: 0; }

  .strip-shade h1 { margin-left: 20%; }

  .carousel-indicators.custom { bottom: 0; }

  .carousel-indicators.custom li {
    width: 12px;
    height: 12px;
    margin: 0 3px;
  }

  .carousel-indicators.custom .active {
    width: 13px;
    height: 13px;
    margin: 0 3px;
    border: 4px solid #fff;
  }

  .radicality-bg h1 { font-size: 24px; }

  .radicality-bg p { font-size: 17px; }

  .radicality-bg p span { font-size: 14px; }

  .img-overlay.first { top: calc(16% - 0px); }

  .gallery h1 { font-size: 28px; }

  .jumbo { font-size: 5rem; }

  .jumbo + h3 { margin-top: 10px; }

  .img35 { margin-top: -84%; }

  .img36 { margin-top: auto; }

  .parallax-window { min-height: 20rem; }

  .quote-align h1 { font-size: 18px; }

  .highlights-box.right .carousel-caption { right: auto; }

  .img-overlay p { font-size: 14px; }

  .affix { height: 46px; }

  .affix.gallery h1 { margin-top: 10px; }
}

@media only screen and (max-width: 600px) {
  .strip-shade h1 {
    margin-top: 4px;
    margin-left: 21%;
    font-size: 28px;
    transform: scale(1,.6);
  }

  .btn.book-now { font-size: 11px; }

  .highlights-box .carousel-caption { font-size: 12px; }

  .quote-align.less { left: 0; }
}

@media only screen and (max-width: 499px) {
  .pad-left1px { padding-left: 1px; }

  .gallery h1 {
    position: relative;
    top: -5px;
    font-size: 20px;
  }

  .affix.gallery h1 { top: 5px; }
}

@media only screen and (max-width: 415px) {
  .strip-shade h1 { margin-left: 26%; }
}

